<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/name" />

    <EditText
        android:id="@+id/et1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:text="@string/e1"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="27dp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/email" />

    <EditText
        android:id="@+id/et2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:text="@string/e1"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="27dp" />

    <TableRow
        android:layout_width="1dp"
        android:layout_height="5dp">


    </TableRow>

    <TextView
        android:layout_width="134dp"
        android:layout_height="wrap_content"
        android:text="@string/g" />

    <RadioGroup
        android:id="@+id/genderGroup"
        android:layout_width="167dp"
        android:layout_height="49dp"
        android:orientation="horizontal">


        <RadioButton
            android:id="@+id/rb1"
            android:layout_width="wrap_content"
            android:layout_height="21dp"
            android:text="@string/m" />

        <RadioButton
            android:id="@+id/rb2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:text="@string/f" />

    </RadioGroup>

    <RadioButton
        android:id="@+id/rb3"
        android:layout_width="91dp"
        android:layout_height="wrap_content"

        android:text="@string/o" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/done" />

    <Spinner
        android:id="@+id/spinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:entries="@array/email" />


    <CheckBox
        android:id="@+id/cb1"
        android:layout_width="233dp"
        android:layout_height="82dp"
        android:text="@string/sub" />

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="89dp">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:id="@+id/submitButton"
            android:layout_weight="2"
            android:text="@string/submit" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:id="@+id/clearButton"
            android:layout_weight="2"
            android:text="@string/clear" />

    </TableRow>


    <Button
        android:id="@+id/tv"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />
</LinearLayout>